--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.0",
+    "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.0",
-    "next": "14.2.2"
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.2"
+    "typescript": "^5"
   }
 }
