--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "@reduxjs/toolkit": "^2.2.0",
     "next": "14.2.2",
     "react": "^18",
